solved warnings